kubernetes/servers/daemonset-linux.yaml
apiVersion: extensions/v1
kind: DaemonSet
metadata:
  labels:
    app: linux
  name: linux
spec:
  selector:
    matchLabels:
      app: linux
  template:
    metadata:
      labels:
        app: linux
    spec:
      containers:
      - command:
        - sleep
        - '86400'
        image: centos:7
        imagePullPolicy: IfNotPresent
        name: linux
        ports:
        - containerPort: 80
          protocol: TCP
        resources:
          limits:
            cpu: 1000m
            memory: 1024M
          requests:
            cpu: 100m
            memory: 64M
        volumeMounts:
        - mountPath: /shared
          name: shared
      nodeSelector:
        beta.kubernetes.io/os: linux
      terminationGracePeriodSeconds: 10
      volumes:
      - hostPath:
          path: /shared
        name: shared
