kubernetes/servers/pod-linux.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: linux
  name: linux
  namespace: linux
spec:
  containers:
  - command:
    - bash
    image: centos:7
    imagePullPolicy: IfNotPresent
    name: linux
    ports:
    - containerPort: 80
      protocol: TCP
    resources:
      limits:
        cpu: 1000m
        memory: 1024M
      requests:
        cpu: 100m
        memory: 64M
    volumeMounts:
    - mountPath: /shared
      name: shared
  nodeSelector:
    beta.kubernetes.io/os: linux
  restartPolicy: Never
  volumes:
  - hostPath:
      path: /shared
    name: shared
