kubernetes/servers/service-linux-headless.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: linux
  name: linux-headless
spec:
  clusterIP: None
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: linux
  type: ClusterIP
