kubernetes/servers/service-linux.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: linux
  name: linux
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: linux
  type: ClusterIP
